--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <canvas></canvas>
   <input id="line-width" type="range" min="1" max="10" value="5" step="0.1">
+  <div>
   <input id="color" type="color">
   <div class="color-option" 
        style="background-color:#1abc9c" 
@@ -51,6 +52,8 @@
        style="background-color:#95a5a6" 
        data-color="#95a5a6"
        ></div>
+  </div>
+  <button id="mode-btn">Fill</button>
   <script src="app.js"></script>
 </body>
 </html>
