--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   <button id="destroy-btn">Destroy</button>
   <button id="eraser-btn">Erase</button>
   <input type="file" id="file" accept="image/*"/>
+  <input id="text" type="text" placeholder="Write and then double click"/>
+
 
   <script src="app.js"></script>
 </body>
