--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
   <button id="eraser-btn">Erase</button>
   <input type="file" id="file" accept="image/*"/>
   <input id="text" type="text" placeholder="Write and then double click"/>
-
-
+  <button id="save">Save Image</button>
   <script src="app.js"></script>
 </body>
 </html>
