--- a/index.html
+++ b/index.html
@@ -8,57 +8,62 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="color-options">
+    <input id="color" type="color">
+    <div class="color-option" 
+         style="background-color:#1abc9c" 
+         data-color="#1abc9c"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#2ecc71" 
+         data-color="#2ecc71"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#3498db" 
+         data-color="#3498db"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#9b59b6" 
+         data-color="#9b59b6"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#34495e" 
+         data-color="#34495e"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#f1c40f" 
+         data-color="#f1c40f"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#e67e22" 
+         data-color="#e67e22"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#e74c3c" 
+         data-color="#e74c3c"
+         ></div>
+    <div class="color-option" 
+         style="background-color:#95a5a6" 
+         data-color="#95a5a6"
+         ></div>
+    </div>
   <canvas></canvas>
-  <input id="line-width" type="range" min="1" max="10" value="5" step="0.1">
-  <div>
-  <input id="color" type="color">
-  <div class="color-option" 
-       style="background-color:#1abc9c" 
-       data-color="#1abc9c"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#2ecc71" 
-       data-color="#2ecc71"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#3498db" 
-       data-color="#3498db"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#9b59b6" 
-       data-color="#9b59b6"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#34495e" 
-       data-color="#34495e"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#f1c40f" 
-       data-color="#f1c40f"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#e67e22" 
-       data-color="#e67e22"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#e74c3c" 
-       data-color="#e74c3c"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#ecf0f1" 
-       data-color="#ecf0f1"
-       ></div>
-  <div class="color-option" 
-       style="background-color:#95a5a6" 
-       data-color="#95a5a6"
-       ></div>
-  </div>
+  <div class="btns">
+  <input id="line-width" 
+         type="range" 
+         min="1" 
+         max="10" 
+         value="5" 
+         step="0.1">
   <button id="mode-btn">Fill</button>
   <button id="destroy-btn">Destroy</button>
   <button id="eraser-btn">Erase</button>
-  <input type="file" id="file" accept="image/*"/>
-  <input id="text" type="text" placeholder="Write and then double click"/>
+  <label for="file">Add Photo
+    <input type="file" id="file" accept="image/*"/>
+  </label>
+  <input id="text" type="text" placeholder="Add text here. :)"/>
   <button id="save">Save Image</button>
+</div>
   <script src="app.js"></script>
 </body>
 </html>
